[gd_scene load_steps=13 format=3 uid="uid://guy552h6jltk"]

[ext_resource type="Theme" uid="uid://dxbr2pe0xoeby" path="res://assets/theme/main_theme.tres" id="1_hjk36"]
[ext_resource type="Script" uid="uid://bdiryxumx4r3n" path="res://merc_options/recruting/merc_recruting.gd" id="2_yfv7x"]
[ext_resource type="PackedScene" uid="uid://cja63mf1ulnpi" path="res://merc_options/recruting/role_and_background_selector.tscn" id="3_qdwdt"]
[ext_resource type="Texture2D" uid="uid://b2x7o7ognf3q4" path="res://assets/img/ui/x_btn1.png" id="4_el4w6"]
[ext_resource type="PackedScene" uid="uid://ej142y2sc4y4" path="res://merc_options/general/attributes.tscn" id="4_qdwdt"]
[ext_resource type="Texture2D" uid="uid://bwsncca7makd0" path="res://assets/img/ui/accept_btn1.png" id="4_qi0hw"]
[ext_resource type="PackedScene" uid="uid://cpxinys4bv6xo" path="res://merc_options/general/stats.tscn" id="5_n1wo6"]
[ext_resource type="Texture2D" uid="uid://b7egansu1kkw0" path="res://assets/img/ui/x_btn2.png" id="5_qdwdt"]
[ext_resource type="Texture2D" uid="uid://isunv4jk5h3a" path="res://assets/img/ui/accept_btn2.png" id="5_ssf5x"]
[ext_resource type="Texture2D" uid="uid://bwwhdp26mv2no" path="res://assets/img/ui/undo_btn1.png" id="8_nop0m"]
[ext_resource type="Texture2D" uid="uid://sjbolkwfnrpv" path="res://assets/img/ui/undo_btn2.png" id="9_4lod0"]
[ext_resource type="Texture2D" uid="uid://bw81x1euw8x15" path="res://assets/img/ui/undo_btn3.png" id="10_4lod0"]

[node name="MercRecruting" type="CanvasLayer"]
script = ExtResource("2_yfv7x")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_hjk36")
theme_override_constants/separation = 0

[node name="Left" type="Control" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 6

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/MarginContainer/PanelContainer"]
texture_filter = 1
layout_mode = 2

[node name="RoleAndBackgroundSelector" parent="HBoxContainer/MarginContainer/PanelContainer/VBoxContainer" instance=ExtResource("3_qdwdt")]
unique_name_in_owner = true
layout_mode = 2

[node name="Attributes" parent="HBoxContainer/MarginContainer/PanelContainer/VBoxContainer" instance=ExtResource("4_qdwdt")]
unique_name_in_owner = true
layout_mode = 2

[node name="Stats" parent="HBoxContainer/MarginContainer/PanelContainer/VBoxContainer" instance=ExtResource("5_n1wo6")]
unique_name_in_owner = true
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_bottom = -8

[node name="HBoxContainer3" type="HBoxContainer" parent="HBoxContainer/MarginContainer/PanelContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 8
alignment = 1

[node name="XBtn" type="TextureButton" parent="HBoxContainer/MarginContainer/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
texture_normal = ExtResource("4_el4w6")
texture_hover = ExtResource("5_qdwdt")

[node name="ReturnBtn" type="TextureButton" parent="HBoxContainer/MarginContainer/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
texture_normal = ExtResource("8_nop0m")
texture_hover = ExtResource("9_4lod0")
texture_disabled = ExtResource("10_4lod0")

[node name="AcceptBtn" type="TextureButton" parent="HBoxContainer/MarginContainer/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
focus_mode = 0
texture_normal = ExtResource("4_qi0hw")
texture_hover = ExtResource("5_ssf5x")

[connection signal="pressed" from="HBoxContainer/MarginContainer/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer3/XBtn" to="." method="_on_x_btn_pressed"]
[connection signal="pressed" from="HBoxContainer/MarginContainer/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer3/ReturnBtn" to="." method="_on_return_btn_pressed"]
[connection signal="pressed" from="HBoxContainer/MarginContainer/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer3/AcceptBtn" to="." method="_on_accept_btn_pressed"]
